# outside

./: .gitignore  .gitlab-ci.yml  .goreleaser.yaml  .justfile  .rustfmt.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Changes.md  README.md  VERSION.toml  cliff.toml
.github/workflows/: ci.yml  rust.yml
demo/: demo.tape  demo.webm
src/: context.rs  main.rs  settings.rs
src/api/: client.rs  geolocation.rs  iplocation.rs  location.rs  mod.rs  weather.rs
src/output/: detailed.rs  json.rs  mod.rs  plain.rs  simple.rs  tui.rs  waybar.rs
src/tui/: async_operations.rs  constants.rs  keyboard_handlers.rs  location_manager.rs  mod.rs  state_manager.rs  ui_components.rs  weather_display.rs
src/utils/: cache.rs  conversions.rs  lookups.rs  mappings.rs  mod.rs  units.rs  unitstrings.rs  urls.rs  weather_classification.rs
