[package]
name = "outside"
version = "0.1.0"
edition = "2024"

[dependencies]
isahc = { version = "1.7.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = { version = "3.0", default-features = false, features = ["macros"] }

clap = { version = "4.2", features = ["derive"] }
cli-settings-derive = "0.3"
anyhow = "1.0"

url = "2.5.4"
chrono = "0.4.41"

tinytemplate = "1.2.1"
xdg = "3.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
