[package]
name = "outside"
version = "0.3.5"
edition = "2021"
authors = ["BaconIsAVeg <baconisaveg@fastmail.ca>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "A multi-purpose weather client for your terminal"
homepage = "https://github.com/BaconIsAVeg/outside"
repository = "https://github.com/BaconIsAVeg/outside"
keywords = ["cli", "weather"]
categories = ["command-line-utilities"]

[dependencies]
isahc = { version = "1.7.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = { version = "3.0", default-features = false, features = ["macros"] }

clap = { version = "4.2", features = ["derive"] }
cli-settings-derive = "0.3"
anyhow = "1.0"

url = "2.5.4"
chrono = "0.4.41"

dirs-next = "2.0.0"
savefile = "0.18"
savefile-derive = "0.18"
tinytemplate = "1.2.1"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "time", "signal", "macros"] }
cursive = "0.21"
stringcase = "0.4"

[package.metadata.deb]
maintainer = "BaconIsAVeg <baconisaveg@fastmail.ca>"
copyright = "2025, BaconIsAVeg <baconisaveg@fastmail.ca>"
license-file = ["LICENSE", "4"]
extended-description = """\
A multi-purpose weather client for your terminal that fetches weather data \
from the Open-Meteo API and supports multiple output formats (simple, detailed, \
JSON, Waybar) along with a complete TUI. The application features intelligent \
caching, location detection, and customizable templating."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/outside", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/outside/", "644"],
    ["LICENSE", "usr/share/doc/outside/", "644"],
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
